--- a/build_dependencies/ssg.yml
+++ b/build_dependencies/ssg.yml
@@ -1,6 +1,7 @@
 stages:
-  - build_ssg
-  - deploy_ssg
+  - update_ssg
+  # - build_ssg
+  # - deploy_ssg
 
 default:
   image:
@@ -10,7 +11,7 @@ default:
     - docker
 
 build_ssg:
-  stage: build_ssg
+  stage: update_ssg
   variables:
     debian_datastream_id: "scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml"
     debian_xccdf_id: "scap_org.open-scap_cref_ssg-debian11-xccdf.xml"
@@ -25,7 +26,6 @@ build_ssg:
       echo "No new version of SSG is available: $ssg_version";
       exit 0;
       fi'
-    - echo $ssg_version > version.txt
     - 'echo "New version of SSG is available: $ssg_version"'
 
     # Install SSG dependencies
@@ -34,6 +34,12 @@ build_ssg:
 
     # Install OpenSCAP
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
+    - 'if [ "$openscap_version" != "$current_oscap_version" ]; then
+      echo "New version of OpenSCAP is available: $openscap_version.";
+      echo "Update before building SSG.";
+      exit 1;
+      fi'
     - git clone -b "v${openscap_version}" --depth 1 https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git
     - apt install -fy ./oscap/oscap_${openscap_version}.deb
 
@@ -46,30 +52,14 @@ build_ssg:
     - mkdir -p /tmp/scap-security-guide-$ssg_version/build
     - cmake -S /tmp/scap-security-guide-$ssg_version -B /tmp/scap-security-guide-$ssg_version/build
     - make -C /tmp/scap-security-guide-$ssg_version/build -j4 debian11
-    - mkdir -p debian11/
-    - cp /tmp/scap-security-guide-$ssg_version/build/ssg-debian11* debian11/
+    - mkdir -p /tmp/debian11/
+    - cp /tmp/scap-security-guide-$ssg_version/build/ssg-debian11* /tmp/debian11/
 
     # Test Scan
     - oscap xccdf eval --datastream-id ${debian_datastream_id} --xccdf-id ${debian_xccdf_id} --profile ${debian_profile} debian11/ssg-debian11-ds.xml || [[ $? == 2 ]]
-  artifacts:
-    paths:
-      - version.txt
-      - debian11/
 
-deploy_ssg:
-  stage: deploy_ssg
-  script:
-    - 'if [ ! -f version.txt ]; then
-      echo "No new version of SSG is available";
-      exit 0;
-      fi'
-    - 'echo "New version of SSG is available: $ssg_version"'
-    - ssg_version=$(cat version.txt)
-
-    - apt update; apt install -y git
-    - cp -r debian11/ /tmp/debian11/
+    # Push new version of SSG to GitLab
     - cd /tmp
-    - pwd; ls -la
     - git init
     - git remote add origin https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git
     - git config user.email "ci-bot@gitlab.example.com"
@@ -79,3 +69,31 @@ deploy_ssg:
     - git commit -m "Update SSG to version $ssg_version"
     - git tag -a "v$ssg_version" -m "Update SSG to version $ssg_version"
     - git push origin v$ssg_version
+#   artifacts:
+#     paths:
+#       - version.txt
+#       - debian11/
+
+# deploy_ssg:
+#   stage: deploy_ssg
+#   script:
+#     - 'if [ ! -f version.txt ]; then
+#       echo "No new version of SSG is available";
+#       exit 0;
+#       fi'
+#     - 'echo "New version of SSG is available: $ssg_version"'
+#     - ssg_version=$(cat version.txt)
+
+#     - apt update; apt install -y git
+#     - cp -r debian11/ /tmp/debian11/
+#     - cd /tmp
+#     - pwd; ls -la
+#     - git init
+#     - git remote add origin https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git
+#     - git config user.email "ci-bot@gitlab.example.com"
+#     - git config user.name "ci-bot"
+
+#     - git add debian11/*
+#     - git commit -m "Update SSG to version $ssg_version"
+#     - git tag -a "v$ssg_version" -m "Update SSG to version $ssg_version"
+#     - git push origin v$ssg_version
