--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,6 @@ variables:
   GIT_SSL_NO_VERIFY: 1
 
 stages:
-  # - build_oscap
-  # - test_oscap
-  # - deploy_oscap
-  # - build_ssg
-  # - deploy_ssg
   - update_oscap
   - update_ssg
   - scan
@@ -24,8 +19,33 @@ include:
   - local: build_dependencies/ssg.yml
 
 run-security-scan:
+  image: theohbrothers/docker-ansible:v2.10.7-alpine-3.13
   stage: scan
   script:
+    - ansible --version
+    - apk update
+    - curl --version || apk add curl
+    - git --version || apk add git
+
+    # Check for oscap version
+    - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
+    - 'if [ "$openscap_version" != "$current_oscap_version" ]; then
+      echo "New version of OpenSCAP is available: $openscap_version.";
+      echo "Update before scanning";
+      exit 1;
+      fi'
+    - echo "Run security scan"
+
+    # Check for ssg version
+    - ssg_version=$(curl --silent "https://api.github.com/repos/ComplianceAsCode/content/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
+    - current_ssg_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
+    - 'if [ "$ssg_version" != "$current_ssg_version" ]; then
+      echo "New version of SSG is available: $ssg_version.";
+      echo "Update before scanning";
+      exit 1;
+      fi'
+
     - echo "Run security scan"
 # run-security-scan:
 #   stage: scan
