--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,6 +29,8 @@ run-security-scan:
     - chmod 400 ~/.ssh/id_rsa
     - rm -f ~/.ssh/known_hosts
     - cp "$DEBUG" playbooks/security-scan/roles/openscap/tasks/install.yml
+    - mkdir -p /etc/ansible/
+    - cp -f "$ANSIBLE_CONFIG" /etc/ansible/ansible.cfg
     - cp -f "$ANSIBLE_INVENTORY" inventory
   script:
     - cat playbooks/security-scan/roles/openscap/tasks/install.yml
