--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,14 +33,12 @@ run-security-scan:
     - cp -f "$ANSIBLE_CFG" /etc/ansible/ansible.cfg
     - cp -f "$ANSIBLE_INVENTORY" inventory
   script:
-    - cat playbooks/security-scan/roles/openscap/tasks/install.yml
-    - cat inventory
-    - cat /etc/ansible/ansible.cfg
     # - apk update
     # - apk add curl git
 
     # # Check for oscap version
     # - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
+    - openscap_version="1.3.8"
     # - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail -n 1 | cut -d '/' -f 3 | sed -E "s/v//")
     # - 'if [ "$openscap_version" != "$current_oscap_version" ]; then
     #   echo "New version of OpenSCAP is available: $openscap_version.";
@@ -59,9 +57,6 @@ run-security-scan:
     #   fi'
 
     # - git clone -b "v${ssg_version}" --depth 1 https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git
-    - ls -la
-    - ansible-config dump
-    - ansible-config view
     - ansible-playbook playbooks/security-scan/main.yml
 # run-security-scan:
 #   stage: scan
