test ansible env

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ run-security-scan:
 
     # - git clone -b "v${ssg_version}" --depth 1 https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git
     - git clone -b "v${openscap_version}" --depth 1 https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git /tmp/oscap
-    - ansible-playbook playbooks/security-scan/main.yml
+    - ansible-playbook playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
 # run-security-scan:
 #   stage: scan
 #   # tags:
