--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -63,10 +63,13 @@
 
 - name: Copy oscap debian package
   copy:
-    src: "/tmp/oscap/"
+    src: "/tmp/oscap/oscap_{{ oscap_version }}.deb"
     dest: "/tmp/"
     mode: 0644
 
 - name: Install oscap debian package
   become: true
-  command: apt -fy install /tmp/oscap/oscap_{{ oscap_version }}.deb
+  apt:
+    deb: "/tmp/oscap_{{ oscap_version }}.deb"
+    state: present
+    update_cache: yes
