--- a/playbooks/security-scan/roles/openscap/tasks/main.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/main.yml
@@ -3,13 +3,15 @@
     path: /usr/bin/oscap
   register: openscap_installed
 
+- name: Check if oscap is up-to-date
+  shell: "oscap --version | grep {{ oscap_version }}"
+  register: oscap_version_check
+  when: openscap_installed.stat.exists
+
 - name: Install OpenSCAP
   import_tasks: install.yml
-  when: not openscap_installed.stat.exists
-# - name: Run OpenSCAP scan for debian
-#   import_tasks: debian-scan.yml
-#   when: ansible_distribution == "Debian"
+  when: not openscap_installed.stat.exists or oscap_version_check.rc != 0
 
-# - name: Run OpenSCAP scan for ubuntu
-#   import_tasks: ubuntu-scan.yml
-#   when: ansible_distribution == "Ubuntu"
+- name: Run OpenSCAP scan for debian
+  import_tasks: debian-scan.yml
+  when: ansible_distribution == "Debian"
