--- a/playbooks/security-scan/roles/openscap/tasks/main.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/main.yml
@@ -7,10 +7,11 @@
   shell: "oscap --version | grep {{ oscap_version }}"
   register: oscap_version_check
   when: openscap_installed.stat.exists
+  failed_when: oscap_version_check.rc not in [ 0, 1 ]
 
 - name: Install OpenSCAP
   import_tasks: install.yml
-  when: not openscap_installed.stat.exists or oscap_version_check.rc != 0
+  when: (not openscap_installed.stat.exists) or (oscap_version_check.rc == 1)
 
 - name: Run OpenSCAP scan for debian
   import_tasks: debian-scan.yml
