--- a/playbooks/security-scan/roles/openscap/tasks/main.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/main.yml
@@ -13,6 +13,10 @@
   import_tasks: install.yml
   when: (not openscap_installed.stat.exists) or (oscap_version_check.rc == 1)
 
+- Debug:
+    msg: "OpenSCAP is not installed or up-to-date"
+  when: (not openscap_installed.stat.exists) or (oscap_version_check.rc == 1)
+
 - name: Run OpenSCAP scan for debian
   import_tasks: debian-scan.yml
   when: ansible_distribution == "Debian"
