--- a/playbooks/security-scan/roles/openscap/tasks/main.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/main.yml
@@ -10,7 +10,8 @@
   failed_when: oscap_version_check.rc not in [ 0, 1 ]
 
 - name: Debug
-  msg: "OpenSCAP is not installed or up-to-date"
+  debug:
+    msg: "OpenSCAP is not installed or up-to-date"
   when: (not openscap_installed.stat.exists) or (oscap_version_check.rc == 1)
 
 - name: Install OpenSCAP
