--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -67,8 +67,16 @@
     dest: "/tmp/"
     mode: 0644
 
+- name: Debug copy
+  debug:
+    msg: "oscap_{{ oscap_version }}.deb copied to /tmp/"
+  when: ansible_distribution == "Debian"
+
 - name: Install oscap debian package
   become: true
   apt:
     deb: "/tmp/oscap_{{ oscap_version }}.deb"
     update_cache: yes
+
+- name: Debug install
+  command: "ls -l /usr/bin/oscap"
