test ansible scan

--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -77,6 +77,7 @@
   apt:
     deb: "/tmp/oscap_{{ oscap_version }}.deb"
     update_cache: yes
+  become_method: sudo
 
 - name: Debug install
   command: "ls -l /usr/bin/oscap"
