--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -74,9 +74,7 @@
 
 - name: Install oscap debian package
   become: true
-  apt:
-    deb: "/tmp/oscap_{{ oscap_version }}.deb"
-    update_cache: true
+  command: "apt -fy /tmp/oscap_{{ oscap_version }}.deb"
 
 - name: Debug install
   command: "ls -l /usr/bin/oscap"
