--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -77,4 +77,5 @@
   command: "apt install -fy /tmp/oscap_{{ oscap_version }}.deb"
 
 - name: Debug install
+  become: true
   command: "ls -l /usr/bin/oscap"
