--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -74,8 +74,8 @@
 
 - name: Install oscap debian package
   become: true
-  command: "apt install -fy /tmp/oscap_{{ oscap_version }}.deb"
+  shell: "apt install -fy /tmp/oscap_{{ oscap_version }}.deb"
 
 - name: Debug install
   become: true
-  command: "ls -l /usr/bin/oscap"
+  shell: "ls -l /usr/bin/oscap"
