--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -74,8 +74,10 @@
 
 - name: Install oscap debian package
   become: true
-  shell: "apt install -fy /tmp/oscap_{{ oscap_version }}.deb"
+  apt:
+    deb: "/tmp/oscap_{{ oscap_version }}.deb"
+    update_cache: true
 
 - name: Debug install
   become: true
-  shell: "ls -l /usr/bin/oscap"
+  command: "ls -l /usr/bin/oscap"
