--- a/playbooks/security-scan/roles/openscap/tasks/install.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/install.yml
@@ -77,6 +77,7 @@
   apt:
     deb: "/tmp/oscap_{{ oscap_version }}.deb"
     update_cache: true
+    force: true
 
 - name: Debug install
   become: true
