--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,9 @@ run-security-scan:
     - git clone -b "v${openscap_version}" --depth 1 https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git /tmp/oscap
     - git clone -b "v${ssg_version}" --depth 1 https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git /tmp/ssg
     - ansible-playbook playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
+  artifacts:
+    paths:
+      - reports
 # run-security-scan:
 #   stage: scan
 #   # tags:
@@ -70,8 +73,5 @@ run-security-scan:
 #   needs: ["trigger_oscap"]
 #   script:
 #     - ansible-playbook playbooks/security-scan/main.yml
-#   artifacts:
-#     paths:
-#       - reports
 # after_script:
 #   - rm ~/.ssh/id_rsa
