--- a/build_dependencies/oscap.yml
+++ b/build_dependencies/oscap.yml
@@ -1,5 +1,5 @@
 stages:
-  - update_oscap
+  - oscap
 
 default:
   image:
@@ -8,15 +8,13 @@ default:
   tags:
     - docker
 
-build_oscap:
-  stage: update_oscap
+update_oscap:
+  stage: oscap
   script:
     # Check if new version of OpenSCAP is available
     - apt update
     - apt install -y curl git
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    # TODO: REMOVE THIS LINE
-    - openscap_version="1.3.7"
     - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
     - 'if [ "$openscap_version" == "$current_oscap_version" ]; then
       echo "No new version of OpenSCAP is available. Current version: $current_oscap_version";
