--- a/build_dependencies/ssg.yml
+++ b/build_dependencies/ssg.yml
@@ -1,5 +1,5 @@
 stages:
-  - update_ssg
+  - ssg
 
 default:
   image:
@@ -8,9 +8,10 @@ default:
   tags:
     - docker
 
-build_ssg:
-  stage: update_ssg
+update_ssg:
+  stage: ssg
   variables:
+    # Variables to run a test scan
     debian_datastream_id: "scap_org.open-scap_datastream_from_xccdf_ssg-debian11-xccdf.xml"
     debian_xccdf_id: "scap_org.open-scap_cref_ssg-debian11-xccdf.xml"
     debian_profile: "xccdf_org.ssgproject.content_profile_anssi_np_nt28_average"
@@ -19,8 +20,6 @@ build_ssg:
     - apt update
     - apt install -y curl git
     - ssg_version=$(curl --silent "https://api.github.com/repos/ComplianceAsCode/content/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-    # TODO: Remove this line
-    - ssg_version='0.1.67'
     - current_ssg_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
     - 'if [ "$ssg_version" == "$current_ssg_version" ]; then
       echo "No new version of SSG is available: $ssg_version";
@@ -30,8 +29,6 @@ build_ssg:
 
     # Check if new version of OpenSCAP is available
     - openscap_version=$(curl --silent "https://api.github.com/repos/OpenSCAP/openscap/releases/latest" | grep '"tag_name":' | sed -E 's/.*"([^"]+)".*/\1/')
-    # TODO: Remove this line
-    - openscap_version='1.3.7'
     - current_oscap_version=$(git -c 'versionsort.suffix=-' ls-remote --refs --sort='version:refname' --tags https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git '*.*.*' | tail --lines=1 | cut --delimiter='/' --fields=3 | sed -E "s/v//")
     - 'if [ "$openscap_version" != "$current_oscap_version" ]; then
       echo "New version of OpenSCAP is available: $openscap_version.";
