--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,11 @@ default:
   tags:
     - docker
 
+.setup_ansible:
+  before_script:
+    - mkdir -p /etc/ansible/
+    - cp -f "$ANSIBLE_CFG" /etc/ansible/ansible.cfg
+
 include:
   - local: build_dependencies/oscap.yml
   - local: build_dependencies/ssg.yml
@@ -26,14 +31,15 @@ run-security-scan:
     name: theohbrothers/docker-ansible:v2.10.7-alpine-3.13
     pull_policy: if-not-present
   stage: scan
-  before_script:
-    - mkdir -p ~/.ssh
-    - cp -f "$SSH_PRIVATE_KEY" ~/.ssh/id_rsa
-    - chmod 400 ~/.ssh/id_rsa
-    - rm -f ~/.ssh/known_hosts
-    - mkdir -p /etc/ansible/
-    - cp -f "$ANSIBLE_CFG" /etc/ansible/ansible.cfg
-    - cp -f "$ANSIBLE_INVENTORY" inventory
+  extends: .setup_ansible
+  # before_script:
+  #   - mkdir -p ~/.ssh
+  #   - cp -f "$SSH_PRIVATE_KEY" ~/.ssh/id_rsa
+  #   - chmod 400 ~/.ssh/id_rsa
+  #   - rm -f ~/.ssh/known_hosts
+  #   - mkdir -p /etc/ansible/
+  #   - cp -f "$ANSIBLE_CFG" /etc/ansible/ansible.cfg
+  #   - cp -f "$ANSIBLE_INVENTORY" inventory
   script:
     - apk update
     - apk add curl git
@@ -58,7 +64,8 @@ run-security-scan:
 
     - git clone -b "v${openscap_version}" --depth 1 https://oauth2:$OSCAP_ACCESS_TOKEN@gitlab.example.com/root/oscap.git /tmp/oscap
     - git clone -b "v${ssg_version}" --depth 1 https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git /tmp/ssg
-    - ansible-playbook playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
+    - ansible-playbook -i $ANSIBLE_INVENTORY --private-key "$SSH_PRIVATE_KEY" playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
+  when: manual
   artifacts:
     paths:
       - reports
