--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,8 @@ run-security-scan:
     - git clone -b "v${ssg_version}" --depth 1 https://oauth2:$SSG_ACCESS_TOKEN@gitlab.example.com/root/ssg.git /tmp/ssg
     - mkdir -p reports
     - ansible-playbook -i $ANSIBLE_INVENTORY --private-key "$SSH_PRIVATE_KEY" playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
+    - ls -la
+    - pwd
   when: manual
   artifacts:
     paths:
