--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,7 @@ run-security-scan:
     - mkdir -p reports
     - ansible-playbook -i $ANSIBLE_INVENTORY --private-key "$SSH_PRIVATE_KEY" playbooks/security-scan/main.yml --extra-vars "oscap_version=${openscap_version}"
     - ls -la
+    - ls -la reports/
     - pwd
   when: manual
   artifacts:
