--- a/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
@@ -15,7 +15,7 @@
 - name: Download report files
   fetch:
     src: "{{ item }}"
-    dest: "reports/{{ inventory_hostname }}/"
+    dest: "reports/"
     flat: yes
   with_items:
     - "/tmp/xccdf-results.xml"
