--- a/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
@@ -15,8 +15,8 @@
 - name: Download report files
   fetch:
     src: "{{ item }}"
-    dest: "reports/prefix-{{ inventory_hostname }}"
-    flat: yes
+    dest: "reports/{{ inventory_hostname }}/"
+    # flat: yes
   with_items:
     - "/tmp/xccdf-results.xml"
     - "/tmp/arf.xml"
