--- a/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
+++ b/playbooks/security-scan/roles/openscap/tasks/debian-scan.yml
@@ -14,15 +14,20 @@
 
 - name: Download report files
   fetch:
-    src: "{{ item }}"
+    # src: "{{ item }}"
+    src: "/tmp/report.html"
     dest: "reports/{{ inventory_hostname }}/"
-    # flat: yes
-  with_items:
-    - "/tmp/xccdf-results.xml"
-    - "/tmp/arf.xml"
-    - "/tmp/report.html"
+    flat: yes
+  # with_items:
+  #   - "/tmp/xccdf-results.xml"
+  #   - "/tmp/arf.xml"
+  #   - "/tmp/report.html"
   when: result.rc in [ 0, 2 ]
 
 - name: Debug inventory_hostname
   debug:
     msg: "{{ inventory_hostname }}"
+
+- name: Debug playbook dir
+  debug:
+    msg: "{{ playbook_dir }}"
