--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,3 +72,4 @@ install-wazuh:
   extends: .setup_ansible
   script:
     - ansible-playbook -i $ANSIBLE_INVENTORY --private-key "$SSH_PRIVATE_KEY" playbooks/install_wazuh_indexer_and_dashboard.yml
+  # when: manual
