--- a/playbooks/install_wazuh_indexer_and_dashboard.yml
+++ b/playbooks/install_wazuh_indexer_and_dashboard.yml
@@ -16,8 +16,8 @@
   become: true
   become_user: root
   roles:
-    - role: ../wazuh-ansible/roles/wazuh/wazuh-indexer
-    - role: ../wazuh-ansible/roles/wazuh/wazuh-dashboard
+    - role: wazuh-ansible/roles/wazuh/wazuh-indexer
+    - role: wazuh-ansible/roles/wazuh/wazuh-dashboard
 
   vars:
     single_node: true
