--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,5 +71,7 @@ install-wazuh:
   stage: install-wazuh
   extends: .setup_ansible
   script:
+    - apk update
+    - apk add bash
     - ansible-playbook -i $ANSIBLE_INVENTORY --private-key "$SSH_PRIVATE_KEY" playbooks/install_wazuh_indexer_and_dashboard.yml
   # when: manual
