--- a/playbooks/install_wazuh_indexer_and_dashboard.yml
+++ b/playbooks/install_wazuh_indexer_and_dashboard.yml
@@ -14,6 +14,15 @@
 
 - hosts: wazuh-server
   become: true
+  tasks:
+    - name: Install gnupg
+      apt:
+        name: gnupg
+        state: present
+      when: ansible_os_family == "Debian"
+
+- hosts: wazuh-server
+  become: true
   become_user: root
   roles:
     - role: wazuh-ansible/roles/wazuh/wazuh-indexer
